Fix menu HTML tags and add spacing for '...more' items

--- a/style.css
+++ b/style.css
@@ -540,6 +540,10 @@ ul  { list-style: none; }
   padding-bottom: 10px;
   margin-bottom: 16px;
 }
+.menu-category__more {
+  margin-top: 24px;
+  padding-left: 10px;
+}
 .menu-category__items li {
   display: flex;
   flex-direction: column;
